--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ disallow_untyped_defs = false
 ignore-paths = "^.*alembic.*$"
 disable = [
     "C0111", # "missing-docstring"
+    "C0415", # "import-outside-toplevel"
     "E1101", # "no-member"
     "R0801", # "duplicate-code"
     "R0902", # "too-many-instance-attributes"
@@ -93,7 +94,6 @@ disable = [
     "W0718", # "broad-exception-caught"
 ]
 good-names-rgxs = ["^.*DTO$"]
-init-hook = 'import sys; sys.path.append("src")'
 max-line-length = 88
 
 [tool.ruff]
