--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,9 +116,8 @@ ignore = [
 "src/app/infrastructure/adapters/password_hasher_bcrypt.py" = ["E501"]       # line-too-long
 "src/app/infrastructure/constants.py" = ["S105"]                             # hardcoded-password-string
 "src/app/presentation/http/auth/constants.py" = ["S105"]                     # hardcoded-password-string
-"src/app/presentation/http/exception_handlers.py" = ["PLR2004", ]            # magic-value-comparison
 "src/app/setup/config/settings.py" = ["PLR2004", ]                           # magic-value-comparison
-"src/app/setup/ioc/di_providers/infrastructure.py" = ["E501", ]              # line-too-long
+"src/app/presentation/http/exceptions/handlers.py" = ["RUF029", ]            # unused-async
 "scripts/dishka/plot_dependencies_data.py" = ["T201", ]                      # print
 
 [tool.ruff.format]
