Add tests for setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ ignore = [
     "PT011", # pytest-raises-too-broad
     "S101", # assert
     "S105", # hardcoded-password-string
+    "S107", # hardcoded-password-default
     "SLF001", # private-member-access
     "UP012", # unnecessary-encode-utf8
 ]
