--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,25 +13,16 @@ jobs:
         with:
           python-version: 3.12.0
 
-      - name: Install UV and dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install uv==0.5.7
-          uv pip install -e '.[dev,test]' --system
+      - name: Install UV
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "0.8.3"
 
-      - name: Format code
-        run: |
-          ruff format
+      - name: Install project editable with extras
+        run: uv pip install -e '.[dev,test]' --system
 
-      - name: Lint code
-        run: |
-          ruff check --exit-non-zero-on-fix
-          slotscheck src
-          mypy
-
-      - name: Test code
-        run: |
-          pytest -v
+      - name: Check code
+        run: make code.check
 
       - name: Test Docker Compose setup
         run: |
