--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 80.0.0"]
+requires = ["setuptools == 80.0.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
@@ -17,36 +17,36 @@ license = "MIT"
 authors = [
     { name = "Ivan Borovets", email = "ivan.r.borovets@gmail.com" },
 ]
-requires-python = ">=3.12.0"
+requires-python = "==3.12.*"
 dependencies = [
-    "alembic>=1.16.1",
-    "alembic-postgresql-enum>=1.7.0",
-    "bcrypt>=4.3.0",
-    "dishka>=1.6.0",
-    "fastapi>=0.115.12",
-    "orjson>=3.10.18",
-    "psycopg[binary]>=3.2.9",
-    "pydantic[email]>=2.11.4",
-    "pyjwt[crypto]>=2.10.1",
-    "rtoml>=0.12.0",
-    "sqlalchemy[mypy]>=2.0.41",
-    "uuid6>=2024.7.10",
-    "uvicorn>=0.34.2",
-    "uvloop>=0.21.0",
+    "alembic==1.16.4",
+    "alembic-postgresql-enum==1.8.0",
+    "bcrypt==4.3.0",
+    "dishka==1.6.0",
+    "fastapi==0.116.1",
+    "orjson==3.11.0",
+    "psycopg[binary]==3.2.9",
+    "pydantic[email]==2.11.7",
+    "pyjwt[crypto]==2.10.1",
+    "rtoml==0.12.0",
+    "sqlalchemy[mypy]==2.0.41",
+    "uuid6==2025.0.1",
+    "uvicorn==0.35.0",
+    "uvloop==0.21.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "mypy>=1.15.0",
-    "pre-commit>=4.2.0",
-    "ruff>=0.11.10",
-    "slotscheck>=0.19.1",
+    "mypy==1.17.0",
+    "pre-commit==4.2.0",
+    "ruff==0.12.5",
+    "slotscheck==0.19.1",
 ]
 test = [
-    "coverage>=7.8.1",
-    "line-profiler>=4.2.0",
-    "pytest>=8.3.5",
-    "pytest-asyncio>=0.26.0"
+    "coverage==7.10.0",
+    "line-profiler==5.0.0",
+    "pytest==8.4.1",
+    "pytest-asyncio==1.1.0"
 ]
 
 [tool.mypy]
