--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,20 +5,19 @@ on: [ push, pull_request ]
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.12.0
+          python-version: "3.12"
 
-      - name: Install UV
+      - name: Install uv
         uses: astral-sh/setup-uv@v6
-        with:
-          version: "0.8.3"
 
-      - name: Install project editable with extras
+      - name: Install dependencies
         run: uv pip install -e '.[dev,test]' --system
 
       - name: Check code
