--- a/config/local/.secrets.toml
+++ b/config/local/.secrets.toml
@@ -10,19 +10,22 @@ PASSWORD = "changethis"
 # Recommended: Use a cryptographically secure random generator to create a
 # string of at least 32 characters including numbers, letters, and symbols
 PEPPER = "REPLACE_THIS_WITH_YOUR_OWN_SECRET_PEPPER_VALUE"
+# https://cheatsheetseries.owasp.org/cheatsheets/Password_Storage_Cheat_Sheet.html#introduction
+HASHER_WORK_FACTOR = 11
+# CPU-bound & GIL released: per-worker ≈ max(1, floor(effective vCPUs / workers))
+HASHER_MAX_THREADS = 8
 
 [security.auth]
 # Recommended: Use a cryptographically secure random generator to create a
 # string of at least 32 characters including numbers, letters, and symbols
 JWT_SECRET = "REPLACE_THIS_WITH_YOUR_OWN_SECRET_VALUE"
-# JWT_ALGORITHM can be set to "HS256", "HS384", "HS512", "RS256", "RS384", "RS512"
+# Can be set to "HS256", "HS384", "HS512", "RS256", "RS384", "RS512"
 JWT_ALGORITHM = "HS256"
-# SESSION_TTL_MIN must be at least 1 (number of minutes)
+# Must be at least 1 (number of minutes)
 SESSION_TTL_MIN = 5
-# SESSION_REFRESH_THRESHOLD must be a number (fraction, 0 < fraction < 1)
+# Must be a number (fraction, 0 < fraction < 1)
 SESSION_REFRESH_THRESHOLD = 0.2
 
 [security.cookies]
-# Secure can be set to 0 or 1
-# Choose 1 for production (secure=True, samesite="Strict")
+# Can be set to 0 or 1, choose 1 for production (secure=True, samesite="Strict")
 SECURE = 0
