--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "sqlalchemy[mypy]==2.0.41",
     "uvicorn==0.35.0",
     "uvloop==0.21.0",
-    "uuid-utils>=0.11.1",
+    "uuid-utils==0.11.1",
 ]
 
 [dependency-groups]
